Удалён css файл

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="author" content="Карташов Илья Сергеевич">
     <meta name="keywords" content="ФИО, направление подготовки, профиль, контакты">
     <!-- Шапка страницы -->
-    <title>Моя визитная карточка </title>
+    <title>МОЯ ВИЗИТНАЯ КАРТОЧКА</title>
 </head>
 
 <body>
